# obs-main-view-source

./: CMakeLists.txt  README.md
.github/workflows/: clang-format.yml  main.yml
ci/: forum-update-info.json
ci/windows/: package-windows.cmd
cmake/: ObsPluginHelpers.cmake
data/locale/: en-US.ini
installer/: installer-Windows.iss.in
packaging/debian/: changelog  control  copyright
packaging/fedora/: obs-studio-plugin-main-view-source.spec
src/: main-view-source.c  plugin-macros.h.in  plugin-main.c
